#10470 blur image setting for section

--- a/public/less/ssb-site-builder/ssb-sections.less
+++ b/public/less/ssb-site-builder/ssb-sections.less
@@ -47,6 +47,12 @@
         -o-filter: blur(5px);
         -ms-filter: blur(5px);
         filter: blur(5px);
+        left: -1%;
+        right: -1%;
+        top: -1%;
+        bottom: -1%;
+        width: 103%;
+        height: 103%;
     }
 
     .parallax {
