--- a/public/less/dashboard/dashboard.less
+++ b/public/less/dashboard/dashboard.less
@@ -553,7 +553,7 @@
     position:relative;
     margin-left: 15px;
     margin-right:15px;
-    margin-top:15px;
+    margin-top:0px!important;
     overflow: hidden;
     .tabbable{
 
@@ -606,6 +606,7 @@
             margin-left: -15px;
             margin-top: -15px;
             .visitor-left-pane{
+                line-height: 2;
                 max-height: 300px;
                 overflow: auto;
                 border-right: solid 1px #EFEFF4;
