--- a/public/less/partials/_base.less
+++ b/public/less/partials/_base.less
@@ -273,6 +273,7 @@ h5.over-title {
 .container-fullw {
     margin-left: -15px;
     margin-right: -15px;
+    margin-bottom: 15px;
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 30px;
