Add CDN for other env

--- a/templates/snippets/index_body_scripts_minimized_cdn.jade
+++ b/templates/snippets/index_body_scripts_minimized_cdn.jade
@@ -4,11 +4,9 @@ script(src="../js/libs/json3/lib/json3.min.js")
 <![endif]-->
 
 
-script(src="http://d2cwrhu7f3xluz.cloudfront.net/js/indigenous.js")
-script(src="http://d2cwrhu7f3xluz.cloudfront.net/js/ng-indigenous.js")
+script(src="http://d1bf5kthmb8nd7.cloudfront.net/js/indigenous.js")
+script(src="http://d1bf5kthmb8nd7.cloudfront.net/js/ng-indigenous.js")
 
-script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section-template.component.js")
-script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section-template.controller.js")
 
 script.
     var tag = document.createElement('script');
