--- a/templates/snippets/index_head_styles_cdn.jade
+++ b/templates/snippets/index_head_styles_cdn.jade
@@ -16,7 +16,7 @@
 link(rel='stylesheet', href='/css/vendor.css')
 
 //- <!-- Frontend Styles -->
-link(rel='stylesheet', href='http://cdn-js.test.indigenous.io/css/styles.css')
+link(rel='stylesheet', href='http://cdn-js.other.indigenous.io/css/styles.css')
 
 style(type="text/css").
 
