Fix CDN urls for test

--- a/templates/snippets/index_body_scripts_minimized_cdn.jade
+++ b/templates/snippets/index_body_scripts_minimized_cdn.jade
@@ -4,8 +4,8 @@ script(src="../js/libs/json3/lib/json3.min.js")
 <![endif]-->
 
 
-script(src="http://d1bf5kthmb8nd7.cloudfront.net/js/indigenous.js")
-script(src="http://d1bf5kthmb8nd7.cloudfront.net/js/ng-indigenous.js")
+script(src="http://cdn-js.test.indigenous.io/js/indigenous.js")
+script(src="http://cdn-js.test.indigenous.io/js/ng-indigenous.js")
 
 
 script.
