--- a/templates/snippets/index_body_scripts.jade
+++ b/templates/snippets/index_body_scripts.jade
@@ -35,7 +35,7 @@ script(src="../js/libs/videogular-overlay-play/overlay-play.js")
 script(src="../js/libs/videogular-buffering/buffering.js")
 script(src="../js/libs/videogular-poster/poster.js")
 script(src="../js/libs/skeuocard/lib/js/jquery.card.js")
-script(src="../js/libs/fingerprint/fingerprint.js")
+script(src="../js/libs/fingerprintjs2/dist/fingerprint2.min.js")
 script(src="../js/libs/angular-bootstrap/ui-bootstrap-tpls.min.js")
 script(src="../js/libs_misc/jstimezonedetect/jstz.min.js")
 script(src='../js/libs/purl/purl.js')
