--- a/templates/snippets/index_body_scripts_minimized_cdn.jade
+++ b/templates/snippets/index_body_scripts_minimized_cdn.jade
@@ -6,7 +6,8 @@ script(src="../js/libs/json3/lib/json3.min.js")
 
 script(src="http://cdn-js.test.indigenous.io/js/indigenous.js")
 script(src="http://cdn-js.test.indigenous.io/js/ng-indigenous.js")
-
+script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section-template.component.js")
+script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section-template.controller.js")
 
 script.
     var tag = document.createElement('script');
