blueimp-gallery should render once at front end and ssb

--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section.component.html
@@ -62,7 +62,7 @@
             >
         </ssb-component-loader>
     </section>
-    <div id="blueimp-gallery" class="blueimp-gallery">
+    <div id="blueimp-gallery" class="blueimp-gallery" ng-if="vm.index == 0">
         <!-- The container for the modal slides -->
         <div class="slides">
 
