--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section-template.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section-template.component.html
@@ -50,7 +50,7 @@
             >
         </ssb-component-loader>
     </section>
-    <div id="blueimp-gallery" class="blueimp-gallery">
+    <div id="blueimp-gallery" class="blueimp-gallery" ng-if="vm.index == 0">
         <!-- The container for the modal slides -->
         <div class="slides">
 
