#10470 blur for all

--- a/public/less/ssb-site-builder/ssb-sections/ssb-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-hero.less
@@ -101,6 +101,13 @@
         -o-filter: blur(5px);
         -ms-filter: blur(5px);
         filter: blur(5px);
+        left: -1%;
+        right: -1%;
+        top: -1%;
+        bottom: -1%;
+        width: 105%;
+        height: 105%;
+        
     }
 
     .ssb-page-section-layout-hero .ssb-hero-main-header [ssb-text-component] {
