--- a/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
@@ -125,7 +125,13 @@
             -moz-filter: blur(5px);
             -o-filter: blur(5px);
             -ms-filter: blur(5px);
-            filter: blur(5px);
+            filter: blur(5px); 
+            left: -1%;
+            right: -1%;
+            top: -1%;
+            bottom: -1%;
+            width: 105%;
+            height: 105%;
         }
         .nav-header-div {
             -webkit-filter: blur(5px);
