tooltip hide issue

--- a/public/admin/assets/views/partials/visitor.html
+++ b/public/admin/assets/views/partials/visitor.html
@@ -118,9 +118,9 @@
                                             <p>
                                                 <span style="padding-left:10px;">{{pageEvent.pageTime | date:'h:mm a'}}</span>
                                                 <ul class="form-values">
-                                                    <li>
+                                                    <li >
                                                         <strong style="overflow: hidden;display:inline-block;">Visited:</strong>
-                                                        <span style="width:80%;" class="text-adjust inline-block"
+                                                        <span style="width:80%;" class="text-adjust inline-block" tooltip-append-to-body="true"
                                                             tooltip-placement="top" tooltip="{{pageEvent.pageRequested}}">{{pageEvent.pageRequested}}</span>
                                                     </li>
                                                 </ul>
