Frontend > 'Image gallery' sub title and 'Video' component title does not appear on 'Text+Image+ Video' section at frontend of application #10514

--- a/public/less/ssb-site-builder/ssb-sections/ssb-text-image-video.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-text-image-video.less
@@ -1,5 +1,5 @@
 [class*="ssb-theme-"] {
-    .ssb-page-section-text-image-video.ssb-page-section-layout-2-col-v4 {
+    .ssb-page-section-text-image-video.ssb-page-section-layout-2-col-v4, .ssb-page-section-text-+-image-+-video.ssb-page-section-layout-2-col-v4 {
         [video-component]{
             clear: both;
             .video-text{
