--- a/public/admin/assets/var/techevent/views/partials/settings.html
+++ b/public/admin/assets/var/techevent/views/partials/settings.html
@@ -313,7 +313,7 @@
                           <div class='form-group' ng-if='website.resources.toggles.userScripts'>
                             <label>Global Scripts</label>
                             <span tooltip-placement="bottom" tooltip="Add script snippets for your website globally"><i class="fa fa-info-circle" /></span>
-                            <textarea class='form-control' ng-model='website.resources.userScripts.global.original'></textarea>
+                            <textarea class='form-control text-area-control-large' ng-model='website.resources.userScripts.global.original'></textarea>
                           </div>
                           <div class="clearfix"></div>
                       </form>
@@ -329,7 +329,7 @@
                           <div class='form-group' ng-if='website.resources.toggles.customCss'>
                             <label>Global Css</label>
                             <span tooltip-placement="bottom" tooltip="Add custom CSS snippets for your website globally"><i class="fa fa-info-circle" /></span>
-                            <textarea class='form-control' ng-model='website.resources.customCss.global.original'></textarea>
+                            <textarea class='form-control text-area-control-large' ng-model='website.resources.customCss.global.original'></textarea>
                           </div>
                           <div class="clearfix"></div>
                       </form>
