--- a/public/less/partials/_form-elements.less
+++ b/public/less/partials/_form-elements.less
@@ -1279,3 +1279,7 @@ input[type="checkbox"] {
     color: @form-label-main-text-color;
 }
 
+
+textarea.form-control.text-area-control-large{
+    min-height: 200px;
+}
