--- a/public/admin/assets/var/am/views/partials/settings.html
+++ b/public/admin/assets/var/am/views/partials/settings.html
@@ -312,7 +312,7 @@
                           <div class='form-group' ng-if='website.resources.toggles.userScripts'>
                             <label>Global Scripts</label>
                             <span tooltip-placement="bottom" tooltip="Add script snippets for your website globally"><i class="fa fa-info-circle" /></span>
-                            <textarea class='form-control' ng-model='website.resources.userScripts.global.original'></textarea>
+                            <textarea class='form-control text-area-control-large' ng-model='website.resources.userScripts.global.original'></textarea>
                           </div>
                           <div class="clearfix"></div>
                       </form>
@@ -328,7 +328,7 @@
                           <div class='form-group' ng-if='website.resources.toggles.customCss'>
                             <label>Global CSS</label>
                             <span tooltip-placement="bottom" tooltip="Add custom CSS (globally-applied) snippets for your website"><i class="fa fa-info-circle" /></span>
-                            <textarea class='form-control' ng-model='website.resources.customCss.global.original'></textarea>
+                            <textarea class='form-control text-area-control-large' ng-model='website.resources.customCss.global.original'></textarea>
                           </div>
                           <div class="clearfix"></div>
                       </form>
