#10504 blog layout issue

--- a/public/less/frontend/components/navbar-v1.less
+++ b/public/less/frontend/components/navbar-v1.less
@@ -206,6 +206,7 @@ ul.nav {
         }
     }
     .ssb-page-section.ssb-wrap-left-fixed-left-nav ul.nav-sub-menu{
+       
         border: none !important;
         padding: 0 !important;
         overflow-y: auto;
@@ -220,6 +221,9 @@ ul.nav {
         background: transparent;
         li{
             border-bottom: 4px solid transparent;
+        }
+        @media  (min-width: 768px) { 
+            width: 100%; 
         }
     }
 }
