--- a/public/less/dashboard/dashboard.less
+++ b/public/less/dashboard/dashboard.less
@@ -441,7 +441,7 @@
     // max-width: 85%;
     height: auto;
     line-height: 1.42857143;
-    background-color: #f3f3f3;
+    background-color: #ffffff;
     border: 4px solid rgba(0,0,0,0.4);
     border-radius: 10px;
     margin: 0 auto;
@@ -454,7 +454,7 @@
         right: 10px;
         padding: 1em;
         font-weight: bold;
-        background: #f3f3f3;
+        background: #ffffff;
         font-size: 20px;
         text-align: center;
         box-shadow: 0px -9px 10px -6px rgba(0, 0, 0, .3);
