--- a/public/admin/assets/views/partials/visitor.html
+++ b/public/admin/assets/views/partials/visitor.html
@@ -1,7 +1,7 @@
 <div class="row live-visitor">
     <div class="col-sm-12">
         <div class="panel panel-white margin-top-15 dashboard-live-widget-container analytics-live-widget-container" id="liveTrafficData"
-            ng-class="{'load1 csspinner': !config.options}">
+            ng-class="{'load1 csspinner': loading}">
             <div class="panel-heading border-light live-overview-container">
                 <h4 class="panel-title text-primary">
                     <strong>Live</strong> Visitors Details </h4>
