--- a/public/admin/assets/views/customer-analytics.html
+++ b/public/admin/assets/views/customer-analytics.html
@@ -48,7 +48,7 @@
         </div>
     </div>
     <div class="clearfix"></div>
-    <live-status live="liveVisitorDetails" active="activeVisitorDetail" config="livePlatformTrafficConfig" ></live-status> 
+    <live-status live="liveVisitorDetails" active="activeVisitorDetail" loading="livedataLoading" ></live-status> 
     <div class="clearfix"></div>
     <div class="row">
         <div class="col-sm-12">
