--- a/public/less/frontend/components/social-link-v1.less
+++ b/public/less/frontend/components/social-link-v1.less
@@ -4,7 +4,9 @@
 div[data-type="social-link"] .inner-page {
   padding: 0;
 }
-
+[social-link-component] div.component.inner-component-style {
+    margin-top: 35px;
+}
   .social-link-v1 {
       .inner-page {
         padding: 0;
@@ -12,8 +14,7 @@ div[data-type="social-link"] .inner-page {
       ul {
           text-align: center;
           padding-left: 0;
-          margin-bottom: 20px;
-          padding-top: 20px;
+          margin-bottom: 20px; 
           li.editable-title{
               width: auto !important;
               height: auto !important;
@@ -36,8 +37,8 @@ div[data-type="social-link"] .inner-page {
           }
       }
       ul li {
-        width: 48px;
-        height: 48px;
+        width: 45px;
+        height: 45px;
         display: inline-block;
         border-radius: 5px;
         text-align: center;
