#10355 image galery min height issue

--- a/public/less/ssb-site-builder/ssb-sections/ssb-image-gallery.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-image-gallery.less
@@ -135,18 +135,18 @@
             .editing.image-wrap {
                 &:hover {
                     .image-gallery,.image-overlay,div.image-overlay div.full_height{
-                        min-height: 246px!important;
+                        height: 246px!important;
                     }
                 }
             }
             .image-gallery,.image-overlay,div.image-overlay div.full_height{
-                min-height: 250px!important;
+                height: 250px!important;
             }
         }
         div.image-overlay{ 
             div.header, div.desc{ 
                 &:not(.full_height){
-                    min-height: 125px;
+                    height: 125px;
                 }
             }  
         } 
@@ -182,17 +182,17 @@
             .editing.image-wrap {
                 &:hover {
                     .image-gallery{
-                        min-height: 246px!important;
+                        height: 246px!important;
                     }
                 }
             }
             .image-gallery,.image-overlay,div.image-overlay div.full_height{
-                min-height: 250px!important;
+                height: 250px!important;
             }
             div.image-overlay{
                 div.header, div.desc{ 
                     &:not(.full_height){
-                        min-height: 125px!important;
+                        height: 125px!important;
                     }
                 } 
             } 
@@ -214,7 +214,7 @@
             }
             div.image-gallery,div.image-overlay,div.image-overlay div.full_height{
                 border-radius: 50%!important;
-                min-height: 350px;
+                height: 350px;
                 width: 350px !important;
                 height: 350px;
                 float: none !important;
@@ -229,7 +229,7 @@
             .editing.image-wrap {
                 &:hover {
                     .image-gallery{
-                        min-height: 346px!important;
+                        height: 346px!important;
                         width: 350px !important;
                         height: 346px;
                     }
@@ -250,12 +250,12 @@
                 display:none;
             }
             div.image-gallery,div.image-overlay,div.image-overlay div.full_height{
-                min-height: 280px!important;
+                height: 280px!important;
             }
             div.image-overlay{ 
                 div.header, div.desc{ 
                     &:not(.full_height){
-                        min-height: 140px;
+                        height: 140px;
                     }
                 } 
             }
@@ -263,7 +263,7 @@
             .editing.image-wrap {
                 &:hover {
                     .image-gallery{
-                        min-height: 276px!important;
+                        height: 276px!important;
                     }
                 }
             }
@@ -297,7 +297,7 @@
             .editing.image-wrap {
                 &:hover {
                     .image-gallery{
-                        min-height: 246px!important;
+                        height: 246px!important;
                     }
                 }
             }
@@ -307,7 +307,7 @@
                 margin: 0 auto;
             }
             .image-gallery,div.image-overlay,div.image-overlay div.full_height{
-                min-height: 250px!important;
+                height: 250px!important;
             }
             div.image-gallery:hover div.image-overlay.mouse-on{
                 display: block;
@@ -318,7 +318,7 @@
             div.image-overlay{ 
                 div.header, div.desc{ 
                     &:not(.full_height){
-                        min-height: 125px;
+                        height: 125px;
                     }
                 } 
             }
@@ -339,7 +339,7 @@
             .editing.image-wrap {
                 &:hover {
                     .image-gallery{
-                        min-height: 246px!important;
+                        height: 246px!important;
                     }
                 }
             }
@@ -349,12 +349,12 @@
                 margin: 0 auto;
             }
             .image-gallery,.image-overlay,div.image-overlay div.full_height{
-                min-height: 250px!important;
+                height: 250px!important;
             }
             div.image-overlay{ 
                 div.header,div.desc{  
                     &:not(.full_height){
-                        min-height: 125px
+                        height: 125px
                     }
                 } 
             } 
@@ -376,7 +376,7 @@
             }
             div.image-gallery,div.image-overlay,div.image-overlay div.full_height{
                 border-radius: 50%!important;
-                min-height: 350px;
+                height: 350px;
                 width: 350px !important;
                 height: 350px;
                 float: none !important;
@@ -385,7 +385,7 @@
             .editing.image-wrap {
                 &:hover {
                     .image-gallery{
-                        min-height: 346px!important;
+                        height: 346px!important;
                         width: 350px !important;
                         height: 346px;
                     }
@@ -418,18 +418,18 @@
                 .editing.image-wrap {
                     &:hover {
                         .image-gallery{
-                            min-height: 146px!important;
+                            height: 146px!important;
                         }
                     }
                 }
                 .image-gallery,div.image-overlay,div.image-overlay div.full_height{
-                    min-height: 150px!important;
+                    height: 150px!important;
                 }
                 div.image-overlay{
                     
                     div.header,div.desc{ 
                         &:not(.full_height){
-                            min-height: 75px;
+                            height: 75px;
                         }
                     } 
                 }
@@ -438,17 +438,17 @@
                     .image-wrap{
                         width:50%;
                         .image-gallery, div.image-overlay,div.image-overlay div.full_height{
-                            min-height: 330px!important;
+                            height: 330px!important;
                         }
                         &:hover {
                             .image-gallery{
-                                min-height: 326px!important;
+                                height: 326px!important;
                             }
                         }
                         div.image-overlay{ 
                             div.header, div.desc{ 
                                 &:not(.full_height){
-                                    min-height: 165px;
+                                    height: 165px;
                                 }
                             } 
                         } 
@@ -512,11 +512,11 @@
 
             .image-wrap{
                 .image-gallery{
-                    min-height: 396px !important;
+                    height: 396px !important;
                 }
                 &:hover {
                     .image-gallery{
-                        min-height: 396px !important;
+                        height: 396px !important;
                     }
                 }
             }
@@ -571,11 +571,11 @@
 
             .image-wrap{
                 .image-gallery{
-                    min-height: 396px !important;
+                    height: 396px !important;
                 }
                 &:hover {
                     .image-gallery{
-                        min-height: 396px !important;
+                        height: 396px !important;
                     }
                 }
             }
@@ -629,11 +629,11 @@
             }
             .image-wrap{
                 .image-gallery{
-                    min-height: 396px !important;
+                    height: 396px !important;
                 }
                 &:hover {
                     .image-gallery{
-                        min-height: 396px !important;
+                        height: 396px !important;
                     }
                 }
             }
@@ -679,11 +679,11 @@
 
             .image-wrap{
                 .image-gallery{
-                    min-height: 396px !important;
+                    height: 396px !important;
                 }
                 &:hover {
                     .image-gallery{
-                        min-height: 396px !important;
+                        height: 396px !important;
                     }
                 }
             }
@@ -727,11 +727,11 @@
             }
             .image-wrap{
                 .image-gallery{
-                    min-height: 396px !important;
+                    height: 396px !important;
                 }
                 &:hover {
                     .image-gallery{
-                        min-height: 396px !important;
+                        height: 396px !important;
                     }
                 }
             }
