--- a/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-nav-hero.less
@@ -16,6 +16,11 @@
             }
         }
     }
+    .ssb-section-type-testimonials .ssb-nav-hero-text-full-wdith .col-xs-6{
+        .ssb-text-settings{
+            word-break: break-all; 
+        }
+    }
     .ssb-page-section-layout-nav-hero {
         .navbar-collapse{
             border-top: none !important;
@@ -489,4 +494,5 @@
     .ssb-nav-hero-text-full-wdith{
         width: 100%
     }
+
 }
