--- a/public/less/frontend/components/social-link-v1.less
+++ b/public/less/frontend/components/social-link-v1.less
@@ -7,6 +7,9 @@ div[data-type="social-link"] .inner-page {
 [social-link-component] div.component.inner-component-style {
     margin-top: 35px;
 }
+.ssb-page-section-contact-us-v13 [social-link-component] .inner-page {
+ padding: 0px;
+}
   .social-link-v1 {
       .inner-page {
         padding: 0;
