#10504 blog layout issue updated

--- a/public/less/frontend/components/navbar-v1.less
+++ b/public/less/frontend/components/navbar-v1.less
@@ -204,9 +204,11 @@ ul.nav {
         li{
             border-bottom: 4px solid transparent;
         }
+    }  
+    .ssb-wrap-left-fixed-left-nav ul.nav-sub-menu{
+        width: 100%;
     }
     .ssb-page-section.ssb-wrap-left-fixed-left-nav ul.nav-sub-menu{
-       
         border: none !important;
         padding: 0 !important;
         overflow-y: auto;
@@ -221,10 +223,7 @@ ul.nav {
         background: transparent;
         li{
             border-bottom: 4px solid transparent;
-        }
-        @media  (min-width: 768px) { 
-            width: 100%; 
-        }
+        } 
     }
 }
 .overflow_visible{
