--- a/public/less/frontend/components/social-link-v1.less
+++ b/public/less/frontend/components/social-link-v1.less
@@ -4,11 +4,13 @@
 div[data-type="social-link"] .inner-page {
   padding: 0;
 }
-[social-link-component] div.component.inner-component-style {
-    margin-top: 35px;
-}
-.ssb-page-section-contact-us-v13 [social-link-component] .inner-page {
- padding: 0px;
+[social-link-component]{
+    div.component.inner-component-style {
+        margin-top: 35px;
+    }
+    .inner-page {
+        padding: 0px;
+    }
 }
   .social-link-v1 {
       .inner-page {
