--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-builder/ssb-form-builder.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-builder/ssb-form-builder.component.html
@@ -80,7 +80,7 @@
                                     </div>
                                 </div>
                                 <div class="col-sm-6 input-field-container">
-                                    <div ng-attr-style="{{vm.fieldStyle(vm.component.formSettings)}}" class="form-group" ng-if="val.visible && val.name === 'message'" ng-repeat="val in vm.component.contactInfo" ng-class="{ 'has-error' : (formBuilder.{{val.name}}.$invalid || formBuilder.{{val.name}}.$error.$required) && !formBuilder.{{val.name}}.$pristine }">
+                                    <div ng-attr-style="{{vm.fieldStyle(vm.component.formSettings)}}" class="form-group {{vm.fieldClass()}}" ng-if="val.visible && val.name === 'message'" ng-repeat="val in vm.component.contactInfo" ng-class="{ 'has-error' : (formBuilder.{{val.name}}.$invalid || formBuilder.{{val.name}}.$error.$required) && !formBuilder.{{val.name}}.$pristine }">
                                     <span ng-if="!val.optional" class="required">*</span>
                                       <textarea placeholder="{{val.label || val.type}}" class="form-control input-lg" name="message" rows="5" ng-model="vm.formBuilder[val.name]" ng-attr-style="{{vm.inputStyle(vm.component.formSettings)}}" name="{{val.name}}" ng-required='!val.optional' ng-pattern="vm.addPattern(val)"></textarea>
                                     </div>
