--- a/public/less/ssb-site-builder/ssb-components/ssb-form-builder.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-form-builder.less
@@ -117,8 +117,7 @@
     }
     margin: 10px;
     .form-layout-1{
-         span.required{
-            margin-left: -10px;
+         span.required{            
             margin-top: 5px;
         }
         position: relative;
@@ -162,7 +161,7 @@
     }
     .form-layout-3{
         span.required{
-            margin-left: -10px;
+            right: 20px;
         }
         position: relative;
         button{
@@ -179,7 +178,7 @@
     }
     .form-layout-4{
         span.required{
-            margin-left: -10px;
+            right: 20px;
         }
         position: relative;
         width: 50%;
@@ -197,7 +196,7 @@
     }
     .form-layout-custom{
         span.required{
-            margin-left: -10px;
+            right: 20px;
         }
         position: relative;
         margin: auto;
