--- a/public/less/ssb-site-builder/ssb-components/ssb-form-builder.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-form-builder.less
@@ -162,6 +162,10 @@
     .form-layout-3{
         span.required{
             right: 20px;
+            &.req-opt-in{
+                right: inherit !important;
+                margin-left: -10px;
+            }
         }
         position: relative;
         button{
@@ -179,7 +183,12 @@
     .form-layout-4{
         span.required{
             right: 20px;
+            &.req-opt-in{
+                right: inherit !important;
+                margin-left: -10px;
+            }
         }
+        
         position: relative;
         width: 50%;
         margin: auto;
@@ -197,6 +206,10 @@
     .form-layout-custom{
         span.required{
             right: 20px;
+            &.req-opt-in{
+                right: inherit !important;
+                margin-left: -10px;
+            }
         }
         position: relative;
         margin: auto;
