--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-builder/ssb-form-builder.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-builder/ssb-form-builder.component.html
@@ -22,7 +22,7 @@
                                     <textarea ng-if="val.name === 'message'" class="form-control input-lg" name="message" rows="5" ng-model="vm.formBuilder[val.name]" ng-attr-style="{{vm.inputStyle(vm.component.formSettings)}}" name="{{val.name}}" ng-required='!val.optional' ng-pattern="vm.addPattern(val)"></textarea>
                                 </div>
                                 <div class="form-group {{vm.fieldClass()}} input-field-container" ng-if="vm.component.optInRequired"  ng-class="{ 'has-error' : (formBuilder._optin.$invalid || formBuilder._optin.$error.$required) && !formBuilder._optin.$pristine }">
-									<span class="required">*</span>
+									<span class="required req-opt-in">*</span>
 									<div class="form-checkbox-field">
 										<input class="optin-checkbox" type="checkbox" ng-model="vm.formBuilder['_optin']"   name="_optin" ng-required='true' ng-change="vm.formFiedlsCHange('_optin')">
 									</div>
@@ -53,7 +53,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group {{vm.fieldClass()}} input-field-container" ng-if="vm.component.optInRequired"  ng-class="{ 'has-error' : (formBuilder._optin.$invalid || formBuilder._optin.$error.$required) && !formBuilder._optin.$pristine }">
-									<span class="required">*</span>
+									<span class="required req-opt-in">*</span>
 									<div class="form-checkbox-field">
 										<input class="optin-checkbox" type="checkbox" ng-model="vm.formBuilder['_optin']"   name="_optin" ng-required='true' ng-change="vm.formFiedlsCHange('_optin')">
 									</div>
@@ -86,7 +86,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group {{vm.fieldClass()}} input-field-container" ng-if="vm.component.optInRequired"  ng-class="{ 'has-error' : (formBuilder._optin.$invalid || formBuilder._optin.$error.$required) && !formBuilder._optin.$pristine }">
-									<span class="required">*</span>
+									<span class="required req-opt-in">*</span>
 									<div class="form-checkbox-field">
 										<input class="optin-checkbox" type="checkbox" ng-model="vm.formBuilder['_optin']" name="_optin" ng-required='true' ng-change="vm.formFiedlsCHange('_optin')">
 									</div>
@@ -115,7 +115,7 @@
                                     <textarea ng-if="val.name === 'message'" placeholder="{{val.label || val.type}}" class="form-control input-lg" name="message" rows="5" ng-model="vm.formBuilder[val.name]" ng-attr-style="{{vm.inputStyle(vm.component.formSettings)}}" name="{{val.name}}" ng-required='!val.optional' ng-pattern="vm.addPattern(val)"></textarea>
                                 </div>
                                 <div class="form-group {{vm.fieldClass()}} input-field-container" ng-if="vm.component.optInRequired"  ng-class="{ 'has-error' : (formBuilder._optin.$invalid || formBuilder._optin.$error.$required) && !formBuilder._optin.$pristine }">
-                                        <span class="required">*</span>
+                                        <span class="required req-opt-in">*</span>
                                         <div class="form-checkbox-field">
                                             <input class="optin-checkbox" type="checkbox" ng-model="vm.formBuilder['_optin']" name="_optin" ng-required='true' ng-change="vm.formFiedlsCHange('_optin')">
                                         </div>
@@ -146,7 +146,7 @@
                                 <div class="form-group  input-field-container col-sm-12" ng-if="vm.component.optInRequired"  ng-class="{ 'has-error' : (formBuilder._optin.$invalid || formBuilder._optin.$error.$required) && !formBuilder._optin.$pristine }">
 
 									<div class="form-checkbox-field">
-                                        <span class="required">*</span>
+                                        <span class="required req-opt-in">*</span>
 										<input class="optin-checkbox" type="checkbox" ng-model="vm.formBuilder['_optin']" name="_optin" ng-required='true' ng-change="vm.formFiedlsCHange('_optin')">
 									</div>
 									<div class="form-checkbox-label">
