--- a/templates/snippets/index_layout.jade
+++ b/templates/snippets/index_layout.jade
@@ -22,6 +22,7 @@ html(class="no-js", lang="en" ng-app="mainApp" ng-controller="MainCtrl as main",
                 include index_head_scripts
             title(data-ng-bind='pageTitle()')
             meta(charset="utf-8")
+            meta(http-equiv="X-UA-Compatible" content="IE=9;IE=10;IE=Edge,chrome=1")
             meta(name="viewport", content="width=device-width, initial-scale=1.0")
             meta(name="description", content=seo.description)
             meta(name="keywords", content=seo.keywords)
