#10366 footer in spl scenario

--- a/public/less/ssb-site-builder/ssb-page-layouts.less
+++ b/public/less/ssb-site-builder/ssb-page-layouts.less
@@ -25,7 +25,7 @@
 }
 
 
-.ssb-page-layout-row-2-col {
+.ssb-page-layout-row-2-col,.ssb-layout__header_2-col_footer .ssb-page-layout-row-footer.ssb-page-layout-row {
     max-width: 1000px;
     margin: 0 auto;
 }
